# CloudArchSecBench

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
backend/: main.py
backend/app/models/: resource_catalog.py  schema.py
backend/app/rules/: base.py  networking.py  operations.py  reliability.py  security.py
backend/app/services/: evaluator.py
benchmark/: benchmark_manifest.json  prompt_template.md
benchmark/scenarios/v0.1/: aws_001_static_website.json  aws_002_rest_api.json  aws_003_wordpress.json  aws_004_ecommerce.json  aws_005_kubernetes_saas.json  aws_006_banking.json  aws_007_hospital.json  aws_008_video_streaming.json  aws_009_event_driven.json  aws_010_ml_inference.json
examples/architectures/: aws_001_output.json
paper/: paper.bib  paper.md
scripts/: run_benchmark.py
tests/: test_evaluator.py
